fixed spacing on grids

--- a/src/styles/Gridlanding.css
+++ b/src/styles/Gridlanding.css
@@ -10,6 +10,11 @@
 
   .blueLandingContainer {
     background-color: #233349;
+    padding-bottom: 25px;
+}
+
+.adviceLandingContainer {
+  padding-bottom: 25px;
 }
   
   .ImageContainer {
